<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>nx.domain</groupId>
  <artifactId>tcc</artifactId>
  <packaging>war</packaging>
  <version>0.1</version>
  <name>Text Conversion Chain</name>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>servlet-api</artifactId>
        <version>3.0-alpha-1</version>
    </dependency>
	<dependency>
	    <groupId>org.apache.james</groupId>
	    <artifactId>apache-james-imap-api</artifactId>
	    <version>0.3</version>
	</dependency>
  </dependencies>
  <build>
    <finalName>tcc</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>2.3.2</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <url>https://github.com/tnakagome/tcc/</url>
  <description>Transform text by applying conversion logics.</description>
</project>
